<resources>
    <string name="app_name">News App</string>

    <!-- Error message when there is no news found [CHAR LIMIT=NONE] -->
    <string name="no_news">No news found. Please check again a few minutes later.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection found.
        Please check your internet connection and restart the app.</string>

    <!-- Error message when there is no contributor data [CHAR LIMIT=NONE] -->
    <string name="no_contributor">Unknown Contributor</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For New Section Preference [CHAR LIMIT=30] -->
    <string name="section_title">Select by News Section</string>
    <string name="section_key">sectionId</string>
    <string name="section_description">Select one of the sections below</string>
    <string name="default_section">@string/all</string>

    <!-- Strings For News Amount Preference [CHAR LIMIT=30] -->
    <string name="page_size_title">Select by News Number</string>
    <string name="page_size_key">page_size</string>
    <string name="page_size_description">Enter number of news to be displayed</string>
    <string name="default_page_size">20</string>

    <string name="GUARDIAN_REQUEST_URL">https://content.guardianapis.com/search?</string>

    <!-- Strings for sections -->
    <string name="all">all</string>
    <string name="football">football</string>
    <string name="money">money</string>
    <string name="sport">sport</string>
    <string name="politics">politics</string>
    <string name="opinion">opinion</string>
    <string name="environment">environment</string>
    <string name="worldNews">world</string>
    <string name="world">world</string>
    <string name="books">books</string>
    <string name="business">business</string>
    <string name="lifeAndStyle">lifeandstyle</string>
    <string name="life">life</string>
    <string name="artAndDesign">artanddesign</string>
    <string name="art">art</string>
    <string name="film">film</string>
    <string name="fashion">fashion</string>
    <string name="travel">travel</string>
    <string name="music">music</string>
    <string name="televisionAndRadio">tv-and-radio</string>
    <string name="television">television</string>
    <string name="tv">tv</string>
    <string name="culture">culture</string>
    <string name="science">science</string>
    <string name="technology">technology</string>
    <string name="society">society</string>
    <string name="education">education</string>
    <string name="inequality">inequality</string>
    <string name="news">news</string>
    <string name="media">media</string>

</resources>
